stacks/media/plex/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  labels:
    app: plex
spec:
  replicas: 3
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: linuxserver/plex:latest
        ports:
        - containerPort: 8989
        - containerPort: 32469
        - containerPort: 32469
        - containerPort: 32400
        - containerPort: 32401
        - containerPort: 3005
        - containerPort: 8324
        - containerPort: 1900 #/udp
        - containerPort: 32410 #/udp
        - containerPort: 32412 #/udp
        - containerPort: 32413 #/udp
        - containerPort: 32414 #/udp
      resources:
        requests:
          cpu: "1"
          memory: "4Gi"
        limits:
          cpu: "2"
          memory: "12Gi"
