stacks/media/plex/plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  # namespace: traefik
spec:
  ports:
    - port: 80
      protocol: TCP
      # targetPort: 80
  selector:
    app: plex
  type: ClusterIP
