stacks/media/plex/plex-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: default
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`plex.localhost`)
      kind: Rule
      middlewares:
        - name: headers-default
      services:
        - name: plex
          namespace: default
          port: 80
